diss: cleaning 3.2 and 3.3

--- a/alternatives.tex
+++ b/alternatives.tex
@@ -433,11 +433,11 @@ especially with respect to independence concepts and efficient calculations
 \parencite[for a recent overview, see][]{itip-ipgms}.
 
 More importantly, however, we find the model unsatisfactory because it offers no clear mechanism %opportunity
-to model posterior imprecision in dependence of sample size. % or \pdc***.
+to model posterior imprecision in dependence of sample size. % or \pdc.
 %there seems to be no consistent mechanism by which posterior imprecision
 The model is thus inable to model prior near-ignorance, and does not exhibit
 a natural decrease in imprecision as information accumulates.%
-%to reflect \pdc***\ in posterior inferences.%
+%to reflect \pdc\ in posterior inferences.%
 \footnote{\label{foot:coolenplusrinderknecht}However, a possibly attractive approach could be to
 combine ideas from \textcite{1993:coolen} and \textcite{2011:rinderknecht:diss}
 in a density ratio class model with non-Bayesian updating
