--- a/jstp.tex
+++ b/jstp.tex
@@ -110,7 +110,7 @@ We discuss some of these approaches in Section~\ref{sec:alternatives},
 and the critical aspects of the Generalised Bayes' Rule discussed in others in Section~\ref{sec:updating}
 and again in Section~\ref{sec:concluding-outlook}.} we
 will strictly rely on this approach in this contribution.
-%throughout ***this Section*** when we speak of \emph{generalised Bayesian inference}.
+%throughout *this Section* when we speak of \emph{generalised Bayesian inference}.
 
 %%\medskip
 
@@ -702,7 +702,7 @@ Inference in \emph{\ymodel s} has the following important properties,
 where the first three items in essence generalize results that have
 been discussed in the literature for the IDM, where, as already said
 above, $\nz$ usually is denoted by $s$.%
-\footnote{See the discussion in Section~\ref{sec:gbicp-properties-criteria}.***}
+\footnote{See the discussion of inference properties in Section~\ref{sec:gbicp-properties-criteria}.}
 \begin{enumerate}[i)]
 \item The larger $\nz$ relative to $n$, the more weight is placed on
 the prior knowledge expressed by $\YZ$, resulting in wider
@@ -1141,10 +1141,8 @@ tend the more to the sample mean the larger the sample gets.
 \end{example}
 
 
-\subsection{Concluding Remarks***}
+\subsection{Concluding Remarks}
 \label{sec:6-gw-071216}
-
-***change it or leave it? draw links to other chapters and sections?***
 
 In this work, we considered generalised Bayesian inference
 in a wide class of imprecise probability models. We first
@@ -1171,8 +1169,8 @@ conflict, as well as to a thorough comparison of the inference
 developed here with the discretisation-based models considered by
 \textcite{2005:whitcomb}, and with the approaches of \textcite{1991:pericchi}
 and \textcite{1994:coolen}, who use different prior classes.%
-\footnote{A discussion of the approaches by Coolen \parencite{1993:coolen,1994:coolen},
-\textcite{2005:whitcomb}, and \textcite{1991:pericchi} was given in Section~\ref{sec:alternatives};
+\footnote{A discussion of the approaches by Coolen \parencite*{1993:coolen,1994:coolen},
+\textcite{2005:whitcomb}, and \textcite{1991:pericchi} is given in Section~\ref{sec:alternatives};
 The approach by \textcite{1997:boratynska} was mentioned in
 Section~\ref{sec:basicsetting}, where we concluded that her approach
 belongs to models of type~(\ref{enum:modeltypes-a}) that are insensitive to \pdc.}
@@ -1183,8 +1181,8 @@ argumentation to a certain Bayesian setting: we studied how far
 one can go \emph{if} one relies strictly on the Generalised Bayes'
 Rule, transferring sets of priors to sets of posteriors element by
 element via Bayes' Rule \eqref{eq:bayesrule}. Alternative learning
-rules, including the approaches enumerated in footnote~\ref{foot:learningrules}, page~\pageref{foot:learningrules},
-%at Section~\ref{sec:jstp-intro},% %***paper intro*** %\ref{sec:intro},
+rules, including the approaches enumerated in footnote~\ref{foot:learningrules}, p.~\pageref{foot:learningrules},%
+%at Section~\ref{sec:jstp-intro},% %*paper intro* %\ref{sec:intro},
 \footnote{See also the critique regarding the Generalised Bayes' Rule in Section~\ref{sec:updating}.}
 could prove very important as, to use one of the referees'
 felicitous words, ``Bayesian methods cannot allow for surprise, the same is
