--- a/luck.tex
+++ b/luck.tex
@@ -22,7 +22,7 @@ which can be easily distributed by means of so-called \emph{packages}
 %, additional functionality can be provided to \texttt{R} users
 via the online repository `cran' (Comprehensive \textbf{R} Archive Network, \url{http://www.cran.R-project.org}).
 %
-%***implements the general model structure from Section~\ref{sec:jstp}.
+%implements the general model structure from Section~\ref{sec:jstp}.
 The present implementation is programmed in a class system of \textbf{R}
 that reflects %mirrors
 the hierarchy between the unified description in terms of \model s%
@@ -105,7 +105,7 @@ Such graphs are called \emph{UML diagrams}.}
 \paragraph{The Basic Classes.} %{Basic Structure of the Package.}
 
 The package \texttt{luck} uses the S4 class system of
-%***To recap, the present implementation is programmed in the S4 class system of
+%To recap, the present implementation is programmed in the S4 class system of
 \textbf{R}, providing the basic framework for the definition, display and updating of
 sets of priors based on \model s by defining the central class \texttt{LuckModel}.
 Inferences in a concrete sample distribution are then carried out
@@ -296,9 +296,5 @@ for concrete data distributions, along with two exemplary inference methods.
 
 
 
-
-%\section{***Isipta'07 paper?***}
-
-%***I would prefer not to include this, or just give a short summary of the contents.***
 
 
